# PnC

Config/Nao/: INTERFACE.yaml  SIMULATION.yaml
Config/Nao/TEST/: CONTROL_ARCHITECTURE_PARAMS.yaml
Config/Valkyrie/TEST/: CONTROL_ARCHITECTURE_PARAMS.yaml
PnC/: CMakeLists.txt
PnC/NaoPnC/: CMakeLists.txt  NaoDefinition.hpp  NaoInterface.cpp  NaoInterface.hpp  NaoStateEstimator.cpp  NaoStateEstimator.hpp  NaoStateProvider.cpp  NaoStateProvider.hpp
PnC/NaoPnC/NaoCtrl/: NaoMainController.cpp  NaoMainController.hpp
PnC/NaoPnC/NaoCtrlArchitecture/: NaoControlArchitecture.cpp  NaoControlArchitecture.hpp
PnC/NaoPnC/NaoLogicInterrupt/: WalkingInterruptLogic.cpp  WalkingInterruptLogic.hpp
PnC/NaoPnC/NaoStateMachine/: ContactTransition.cpp  ContactTransition.hpp  ContactTransitionEnd.cpp  ContactTransitionEnd.hpp  DoubleSupportBalance.cpp  DoubleSupportBalance.hpp  DoubleSupportShift.cpp  DoubleSupportShift.hpp  DoubleSupportStand.cpp  DoubleSupportStand.hpp  SwingControl.cpp  SwingControl.hpp
PnC/NaoPnC/NaoTask/: AngularMomentumTask.cpp  CoMxyz.cpp  CoMxyzRxRyRzTask.cpp  DCMTask.cpp  DCMTask.hpp  SelectedJointTask.cpp
PnC/NaoPnC/NaoTaskAndForceContainer/: NaoTaskAndForceContainer.cpp  NaoTaskAndForceContainer.hpp
PnC/NaoPnC/NaoTrajectoryManager/: UpperBodyJointTrajectoryManager.cpp  UpperBodyJointTrajectoryManager.hpp
PnC/TrajectoryManager/: DCMTrajectoryManager.cpp  FootSE3TrajectoryManager.cpp
PnC/ValkyriePnC/: ValkyrieInterface.cpp  ValkyrieInterface.hpp
RobotModel/Robot/Nao/: nao.urdf  (+2 more)
Script/: install_rl_package.sh
Simulator/Dart/: CMakeLists.txt
(+130 files in other folders)
